--- a/package.json
+++ b/package.json
@@ -16,8 +16,12 @@
     "@lifi/widget": "^3.16.0",
     "@solana/wallet-adapter-react": "^0.15.35",
     "@tanstack/react-query": "^5.66.0",
+    "framer-motion": "^12.4.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.1.5",
+    "react-tsparticles": "^2.12.2",
+    "tsparticles": "^3.8.1",
     "wagmi": "^2.14.9"
   },
   "devDependencies": {
