--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "@bigmi/react": "^0.1.0",
     "@lifi/widget": "^3.16.0",
+    "@react-three/drei": "^9.121.4",
+    "@react-three/fiber": "^8.17.14",
     "@solana/wallet-adapter-react": "^0.15.35",
     "@tanstack/react-query": "^5.66.0",
     "framer-motion": "^12.4.0",
@@ -21,6 +23,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.5",
     "react-tsparticles": "^2.12.2",
+    "three": "^0.173.0",
     "tsparticles": "^3.8.1",
     "wagmi": "^2.14.9"
   },
