--- a/package.json
+++ b/package.json
@@ -12,33 +12,44 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@bigmi/react": "^0.1.0",
-    "@lifi/widget": "^3.16.0",
-    "@react-three/drei": "^9.121.4",
-    "@react-three/fiber": "^8.17.14",
+    "@bigmi/react": "^0.1.1",
+    "@lifi/widget": "^3.17.1",
+    "@react-spring/web": "^9.7.5",
+    "@react-three/drei": "^9.122.0",
+    "@react-three/fiber": "^8.18.0",
     "@solana/wallet-adapter-react": "^0.15.35",
-    "@tanstack/react-query": "^5.66.0",
-    "framer-motion": "^12.4.0",
-    "react": "^18.3.1",
+    "@tailwindcss/vite": "^4.0.8",
+    "@tanstack/react-query": "^5.66.9",
+    "framer-motion": "^12.4.7",
+    "jsrepo": "^1.39.2",
+    "matter-js": "^0.20.0",
+    "ogl": "^1.0.11",
+    "react": "18.3.1",
+    "react-bits": "^1.0.5",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.1.5",
+    "react-native-web": "^0.19.13",
+    "react-router-dom": "^7.2.0",
     "react-tsparticles": "^2.12.2",
+    "tailwindcss": "^4.0.8",
     "three": "^0.173.0",
     "tsparticles": "^3.8.1",
-    "wagmi": "^2.14.9"
+    "wagmi": "^2.14.11"
   },
   "devDependencies": {
-    "@eslint/js": "^9.17.0",
+    "@eslint/js": "^9.21.0",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
     "esbuild": "^0.24.2",
-    "eslint": "^9.17.0",
-    "eslint-plugin-react": "^7.37.2",
-    "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-react-refresh": "^0.4.16",
+    "eslint": "^9.21.0",
+    "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-react-hooks": "^5.1.0",
+    "eslint-plugin-react-refresh": "^0.4.19",
     "gh-pages": "^6.3.0",
-    "globals": "^15.14.0",
-    "vite": "^6.0.11"
+    "globals": "^15.15.0",
+    "vite": "^6.1.1"
+  },
+  "resolutions": {
+    "react": "18.3.1"
   }
 }
