--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "@solana/wallet-adapter-react": "^0.15.35",
     "@tailwindcss/vite": "^4.0.8",
     "@tanstack/react-query": "^5.66.9",
+    "animejs": "^3.2.2",
     "framer-motion": "^12.4.7",
     "jsrepo": "^1.39.2",
     "matter-js": "^0.20.0",
     "ogl": "^1.0.11",
+    "postprocessing": "^6.37.1",
     "react": "18.3.1",
     "react-bits": "^1.0.5",
     "react-dom": "^18.3.1",
@@ -38,6 +40,7 @@
     "tailwindcss": "^4.0.8",
     "three": "^0.173.0",
     "tsparticles": "^3.8.1",
+    "vanta": "^0.5.24",
     "viem": "^2.23.6",
     "wagmi": "^2.14.11"
   },
