--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "animejs": "^3.2.2",
     "framer-motion": "^12.4.7",
     "jsrepo": "^1.39.2",
+    "lucide-react": "^0.483.0",
     "matter-js": "^0.20.0",
     "ogl": "^1.0.11",
     "postprocessing": "^6.37.1",
@@ -37,6 +38,7 @@
     "react-router-dom": "^7.2.0",
     "react-tsparticles": "^2.12.2",
     "react-tweet-embed": "^2.0.0",
+    "tailwind-variants": "^1.0.0",
     "tailwindcss": "^4.0.8",
     "three": "^0.173.0",
     "tsparticles": "^3.8.1",
