--- a/package.json
+++ b/package.json
@@ -13,10 +13,15 @@
   },
   "dependencies": {
     "@bigmi/react": "^0.1.1",
+    "@layerzerolabs/lz-evm-protocol-v2": "^3.0.83",
+    "@layerzerolabs/oapp-evm": "^0.3.2",
+    "@layerzerolabs/onft-evm": "^0.2.3",
+    "@layerzerolabs/solidity-examples": "^1.0.0",
     "@lifi/sdk": "^3.6.2",
     "@lifi/widget": "^3.17.1",
     "@moonpay/moonpay-js": "^0.6.6",
     "@moonpay/moonpay-react": "^1.8.10",
+    "@openzeppelin/contracts": "^5.2.0",
     "@react-spring/web": "^9.7.5",
     "@react-three/drei": "^9.122.0",
     "@react-three/fiber": "^8.18.0",
@@ -51,17 +56,24 @@
     "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
     "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
     "@eslint/js": "^9.21.0",
+    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
     "buffer": "^6.0.3",
+    "dotenv": "^16.4.7",
     "esbuild": "^0.24.2",
     "eslint": "^9.21.0",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
+    "ethers": "^6.13.5",
     "gh-pages": "^6.3.0",
     "globals": "^15.15.0",
+    "hardhat": "^2.22.19",
+    "hardhat-deploy": "^1.0.1",
+    "hardhat-ethers": "^1.0.1",
+    "hardhat-etherscan": "^1.0.1",
     "process": "^0.11.10",
     "vite": "^6.1.1"
   },
